--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <nav id="nav-menu">
             <div class="logo">L.I.C.</div>
             <button class="nav-btn" onclick="ui.showScreen('game'); ui.toggleMenu()">剧情终端</button>
+            <button class="nav-btn" onclick="ui.showStoryMap(); ui.toggleMenu()">剧情路线</button>
             <button class="nav-btn" onclick="ui.showScreen('profile'); ui.toggleMenu()">个人档案</button>
             <button class="nav-btn" onclick="ui.showScreen('harem'); ui.toggleMenu()">关系网络</button>
             <button class="nav-btn" onclick="saveSystem.saveGame(); ui.toggleMenu()">保存进度</button>
@@ -110,6 +111,17 @@
                     <button class="sys-btn" onclick="ui.showScreen('menu')">返回主菜单</button>
                 </div>
                 <div id="save-status"></div>
+            </div>
+
+            <!-- 5. 剧情路线图 -->
+            <div id="screen-story-map" class="screen">
+                <div class="panel-header">
+                    <h2>剧情路线图</h2>
+                    <button class="close-btn" onclick="ui.showScreen('game')">×</button>
+                </div>
+                <div id="story-map-container">
+                    <!-- 动态生成的剧情节点 -->
+                </div>
             </div>
 
         </main>
